# Neo-Embedded-Linux

./: .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  LICENSE  README.md  imx-env.sh  tspi_env.sh
.claude/commands/: dd.md
.gemini/: GEMINI.md
.gemini/skills/: .gitignore  SKILLS-README.md  SKILLS-THIRD_PARTY_NOTICES.md
docs/: Kernel  Linux-Kernel-Ref-Resource.md  【书签】IMX6ULLRM（6ULL用户手册）.xml  【书签】嵌入式Linux应用开发完全手册V5.2_IMX6ULL_Pro开发板.xml
note/: .gitignore  KernelLearning最佳实践.md  README.md
note/DTS/: 00-governance-plan.md  01-usage-model.md  02-syntax-basics.md  03-bindings-intro.md  100-dts-to-driver.md  OpenFirmware DTS Overview(1).md  dt-spec-v0.4-zh.md
note/Sup/: README.md
note/SysCall/: 00-系统调用全景.md  02-进程地址空间-页表与MMU.md  03-虚实之间：MMU的无感与负担.md
note/kernel/: plan-20260407.md
note/sdk/: 01_100ask-BSP同步与py-3.10l适配.md  01_100ask-BSP源码同步与脚本wsl适配.md  02_内核预编译与树外module开发流程.md
prj/: .gitignore  prj.code-workspace  tspi.code-workspace
prj/01_hello_drv/: Kbuild  Makefile  Makefile.bak  README.md
prj/02_mmap_drv/: Kbuild  Makefile  README.md  compile_commands.json
prj/02_process_demo/: my_viewer.c
prj/03-Advanced-IO/: Design-Drv.md  Makefile  README.md  (+1 more)
prj/05-GraphStack/tspi-greet-rs/: .gitignore  Cargo.toml  Conclude.md  Design-CrossCompile.md  Design-TimeSeq.md  Design-Wayland-Rs.md  README.md  build.sh  deploy.sh  test.sh
prj/05-GraphStack/tspi-greet-rs/.cargo/: config.toml
prj/05-GraphStack/tspi-greet-rs/etc/: 00-kiosk.ini
prj/05-GraphStack/tspi-greet-rs/src/: draw.rs  main.rs
sdk/: .gitignore  README.md  Setup-imx.md  Setup-tspi.md
(+181 files in other folders)
